fix navigation spacing

--- a/_sass/site/_navigation-list.scss
+++ b/_sass/site/_navigation-list.scss
@@ -8,7 +8,8 @@
 
   // item
 
-  &__item {
+  &__item:not(:last-child) {
+    padding-right: $small-spacing;
   }
 
   // link
